# asktowebapi

./: .gitignore  Dockerfile  api.py  app.py  asktoweb.js  pyproject.toml  requirements.txt  test.py
.github/workflows/: main_asktowebapi-0714.yml
cdn/: asktoweb.js
static/: asktoweb.js  localization.json
uploads/: asktoweb.js
