[tool.poetry]
name = "asktowebapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.111.0"
fastapi-cli = "0.0.4"
langchain = "0.2.3"
langchain-community = "0.2.4"
langchain-core = "0.2.5"
langchain-cohere = "0.1.8"
langchain-openai = "0.1.8"
langchain-pinecone = "0.1.1"
langchain-anthropic = "0.1.15"
langsmith = "0.1.77"
markdown-it-py = "3.0.0"
openai = "1.32.0"
pinecone-client = "3.2.2"
pydantic = "2.7.4"
pydantic-core = "2.18.4"
python-dotenv = "1.0.1"
supabase = "2.5.0"
urllib3 = "2.2.1"
uvicorn = "0.30.1"
langchain-groq = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
